[build-system]
requires = ["poetry-core>=1.0.7"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sanic-synchro-ctx"
version = "0.1.0"
# Don't forget to change the version number in __init__.py and CITATION.cff along with this one
description = "Synchronize Sanic contects between instances when using multiple workers"
license = "MIT"
authors = [
    "Ashley Sommer <ashleysommer@gmail.com>"
]
readme = "README.md"
repository = "https://github.com/ashleysommer/sanic-synchro-ctx"
homepage = "https://github.com/ashleysommer/sanic-synchro-ctx"
keywords = ["Linked Data", "Semantic Web", "RDF", "Python", "SHACL", "Shapes", "Schema", "Validate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]
packages = [
    { include = "sanic_synchro_ctx" },
    { include = "examples", format = "sdist" },
    { include = "benchmarks", format = "sdist" },
    { include = "test", format = "sdist" }
]

include = [
    { path = "MANIFEST.in", format = "sdist" },
    { path = "pyproject.toml", format = "sdist" },
    { path = "poetry.lock", format = "sdist" },
    { path = ".editorconfig", format = "sdist" },
    { path = ".flake8", format = "sdist" },
    { path = "Makefile", format = "sdist" },
    { path = "*.md" },
    { path = "*.txt" },
]


[tool.poetry.dependencies]
python = "^3.8.0"  # Compatible python versions must be declared here
sanic = ">=21.9.3"
aioredis = { version=">=2.0.1", optional=true, extras=["hiredis"] }
hiredis = { version=">=1.0.0", optional=true }

[tool.poetry.dev-dependencies]
tox = "*"
coverage = "^4.5"
pytest = "^5.0"
pytest-cov = "^2.8.1"
flake8 = {version="^3.8.0", optional=true}
isort = {version="^5.7.0", optional=true}
black = {version="21.12b0", optional=true}
mypy = {version="^0.800", optional=true}
types-setuptools = {version="*", optional=true}


[tool.poetry.extras]
redis = ["aioredis", "hiredis"]
dev-lint = ["isort", "black", "flake8"]
dev-type-checking = ["mypy", "types-setuptools"]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.black]
required-version = "21.12b0"
line-length = "119"
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | htmlcov
    | benchmarks
    | examples
    | sanic_synchro_ctx.egg-info
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
atomic = true
default_section = "THIRDPARTY"
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = "sanic_synchro_ctx"
known_third_party = ["pytest"]
line_length = 119
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist = py38, py39, lint, type-checking

[testenv]
deps =
    poetry>=1.1.12
    py38: coveralls
passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH TRAVIS_BUILD_DIR
skip_install = true
allowlist_externals = python3, ls, pwd, env
commands_pre =
    poetry install -vv -n --no-root --extras "redis"
commands =
    - poetry show
    poetry run pytest --cov=sanic_synchro_ctx test/
    - poetry run coverage combine --append
    poetry run coverage report -m
    poetry run coverage html -i
    py38: - coveralls

[testenv:lint]
commands_pre =
    poetry install -vv -n --no-root --extras "dev-lint"
commands =
    - poetry show
    poetry run flake8 sanic_synchro_ctx
    poetry run isort --check-only sanic_synchro_ctx
    poetry run black --check --verbose --config ./pyproject.toml sanic_synchro_ctx

[testenv:type-checking]
commands_pre =
    poetry install -vv -n --no-root --extras "dev-type-checking"
    poetry run pip3 install "mypy>=0.800" "types-setuptools"
commands =
    - poetry show
    poetry run python3 -m mypy --ignore-missing-imports sanic_synchro_ctx

"""
